# MarkBear

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  markdown-import.md  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
.claude/: settings.json  settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: index.html  index.md
docs/.vitepress/: config.ts
docs/.vitepress/theme/: custom.css  index.ts
docs/guide/: editing.md  faq.md  getting-started.md  importing.md
docs/zh/: index.md
docs/zh/guide/: editing.md  faq.md  getting-started.md  importing.md
scripts/: fetch-pdfium.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  execution  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/convert/: docx.rs  html.rs  mod.rs  pdf.rs  pptx.rs  xlsx.rs
src/components/CodeBlockRenderer/: CodeBlockRenderer.css  CodeBlockRenderer.tsx
src/components/Editor/: CodeBlockNodeView.tsx  Editor.tsx  EditorHost.tsx  EditorLayout.module.css  HtmlBlockNodeView.tsx  SourceEditor.tsx  TableHoverPanel.tsx
src/components/Search/: SearchPanel.tsx
src/components/Sidebar/: FileItem.tsx  Sidebar.tsx
src/components/Toolbar/: Toolbar.tsx
src/components/ui/: dropdown-menu.tsx  tooltip.tsx
src/extensions/: CodeBlockEnhancer.ts  footnotes.test.ts  footnotes.ts  rawHtml.test.ts  rawHtml.ts
src/fonts/: LICENSES.md  fonts.css
src/hooks/: useAutoSave.ts  useEditorLayout.ts  usePlatformInitialization.ts  useRecentFiles.ts
src/i18n/locales/: en.json  zh.json
src/lib/: codeBlockUtils.ts  layoutCalculations.ts  markdownExtensions.test.ts  markdownExtensions.ts  markdownTestUtils.ts  sanitizeHtml.test.ts  sanitizeHtml.ts  tableCommands.ts  utils.ts
src/stores/: documentStore.ts  editorStore.ts  settingsStore.ts  uiStore.ts
src/styles/: tauri-controls.css
src/theme/: types.ts  utils.ts
src/types/: markdown-it-footnote.d.ts
