[package]
name = "Pourdown"
version = "0.5.0"
description = "A Tauri-based WYSIWYG Markdown editor"
authors = ["passpier"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["protocol-asset", "image-png"] }
tauri-plugin-fs = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-os = "2.0"
tauri-plugin-single-instance = "2.0"
tauri-plugin-opener = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
walkdir = "2"
regex = "1"
docx-rs = "0.4"
calamine = { version = "0.33", features = ["dates"] }
chrono = "0.4"
pulldown-cmark = "0.13"
markdown2pdf = "0.2"
# Pinned exactly (not "0.9") — this crate's `bind_to_library` resolves its
# entire symbol table eagerly, keyed to a specific PDFium build via its
# default `pdfium_<N>` feature. A caret-range dependency let CI silently pick
# up 0.9.3's newer default (requiring PDFium >= chromium/7881) while the
# vendored binary stayed frozen at an older build — see CLAUDE.md's PDFium
# gotcha entry and scripts/fetch-pdfium.mjs for the full incident and fix.
# Bump this and PDFIUM_VERSION in scripts/fetch-pdfium.mjs together, deliberately.
pdfium-render = { version = "=0.9.3", features = ["thread_safe"] }
zip = "2"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp", "bmp"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "s"
panic = "abort"
strip = true
